# Rancho-Content-Studio

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml  requirements.txt  run_backend.py
backend/app/: __init__.py  main.py
backend/app/api/: calendar.py  config.py  editorial.py  events.py  health.py  jobs.py  library.py  media.py  visual_styles.py
backend/app/core/: config.py  database.py  seed.py
backend/app/models/: __init__.py  content.py  events.py  identity.py  jobs.py  local_app_config.py  media.py
backend/app/repositories/: __init__.py
backend/app/schemas/: calendar.py  config.py  copywriting.py  editorial.py  events.py  exporting.py  health.py  importing.py  jobs.py  library.py  pieces.py  visual_styles.py
backend/app/services/: calendar_service.py  (+18 more)
backend/scripts/: reset_local_demo.py
backend/tests/: test_config.py  test_content_pieces.py  test_copywriting.py  test_curation.py  test_database.py  test_enhancement.py  test_events.py  test_exporting.py  test_health.py  test_import.py  test_library_calendar.py  test_metadata.py  test_phase_1_schema_seed.py  test_similarity.py  test_video_enhancement.py  test_visual_analysis.py  test_visual_styles_reset.py
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: 01_documento_maestro.md  02_arquitectura_tecnica.md  03_modelo_datos_logico.md  04_diccionario_datos_tecnico.md  05_flujos_detallados.md  06_diseno_ui_ux.md  07_casos_uso_historias.md  08_plan_tecnico_implementacion.md
samples/: README.md
(+45 files in other folders)
