[package]
name = "rancho-content-studio"
version = "0.1.0"
description = "Rancho Content Studio desktop shell"
authors = ["Rancho Flor Maria"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rancho_content_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
